--- a/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
+++ b/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
@@ -1,2 +1,19 @@
+# This name will appear in the GitHub Actions list.
+name: 'Build Miryoku QWERTY for Corne'
 
-kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
+on:
+  workflow_dispatch:
+
+jobs:
+  build:
+    uses: ./.github/workflows/main.yml
+    secrets: inherit
+    with:
+      # Corrected format with brackets and quotes
+      # The controller board for your keyboard (e.g., nice_nano_v2)
+      board: '["nice_nano_v2"]'
+      # The keyboard shield (use "corne_left" and "corne_right" for each half)
+      shield: '["corne_left", "corne_right"]'
+      # Set the main alphabet layer to QWERTY
+      alphas: '["qwerty"]'
+      kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
