--- a/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
+++ b/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
@@ -1,5 +1,5 @@
 # This name will appear in the GitHub Actions list.
-name: 'Build Miryoku QWERTY for Corne'
+name: 'Build Miryoku QWERTY w/ CONFIG_ZMK_DISPLAY for Corne'
 
 on:
   workflow_dispatch:
