Change kconfig setting to enable CONFIG_ZMK_POINTING

--- a/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
+++ b/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
@@ -16,4 +16,4 @@ jobs:
       shield: '["corne_left", "corne_right"]'
       # Set the main alphabet layer to QWERTY
       alphas: '["qwerty"]'
-      kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
+      kconfig: '["CONFIG_ZMK_POINTING=y"]'
