Rename workflow for Miryoku QWERTY Pointing build

--- a/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
+++ b/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
@@ -1,5 +1,5 @@
 # This name will appear in the GitHub Actions list.
-name: 'Build Miryoku QWERTY Pointing for Corne'
+name: 'Build MiryokuCorne QWERTYPointing'
 
 on:
   workflow_dispatch:
