Fix workflow name formatting in YAML file

--- a/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
+++ b/.github/workflows/corne-qwerty-config_zmk_pointingbuild.yml
@@ -1,5 +1,5 @@
 # This name will appear in the GitHub Actions list.
-name: 'Build MiryokuCorne QWERTYPointing'
+name: 'Build MiryokuCorneQWERTYPointing'
 
 on:
   workflow_dispatch:
