--- a/.github/workflows/corne-qwerty-pointing.yml
+++ b/.github/workflows/corne-qwerty-pointing.yml
@@ -9,7 +9,7 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["nice_nano_v2"]'
+      board: '["nice_nano"]'
       shield: '["corne_left", "corne_right"]'
       alphas: '["qwerty"]'
       kconfig: '["CONFIG_ZMK_POINTING=y"]'
